<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center|center_horizontal"
    android:background="#FFFFFF"
    android:orientation="vertical" >
	
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:gravity="center_vertical|center_horizontal"
		android:layout_marginTop="10dip">
	
	    <LinearLayout
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:gravity="center_vertical|center_horizontal"
	        android:orientation="vertical" >

			<ImageView android:id="@+id/logo_img" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:src="@drawable/ptlogo" />
			<EditText android:id="@+id/usr_name" android:layout_width="250dip"
				android:layout_height="wrap_content"
				android:lines="1" android:hint="@string/txt_user" android:inputType="textUri"
				android:imeOptions="actionGo" />
			<EditText android:id="@+id/usr_psw" android:layout_width="250dip"
				android:layout_height="wrap_content"
				android:lines="1" android:hint="@string/txt_psw" android:inputType="textUri"
				android:password="true" android:imeOptions="actionGo"
				/>
	
		</LinearLayout>
	
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:gravity="center_vertical|center_horizontal"
			android:layout_marginTop="10dip">
	
			<Button android:id="@+id/login_button" android:layout_width="80dip"
				android:layout_height="wrap_content" android:text="@string/btn_login" />
	
			<Button android:id="@+id/newusr_button" android:layout_width="80dip"
				android:layout_height="wrap_content" android:text="@string/btn_new" />
				
			<CheckBox android:id="@+id/chk_remember" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:checked="true"
				android:text="@string/chk_remember" android:textColor="#000000" />
		</LinearLayout>
	</LinearLayout>
	

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_alignParentBottom="true"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_gravity="bottom"
		android:layout_marginBottom="0dip" android:background="@drawable/mapback">

		<ImageButton android:id="@+id/map_button"
			android:layout_width="50dip" android:layout_height="50dip"
			android:text="@string/btn_new" android:layout_marginTop="3dip"
			android:src="@android:drawable/ic_menu_mapmode" />

		<TextView android:id="@+id/wip" android:text="@string/mappa"
			android:textSize="14sp" android:textStyle="bold" android:textColor="#FFFF00"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="0" android:layout_marginLeft="60dip"
			android:layout_marginTop="15dip"/>

	</RelativeLayout>
</RelativeLayout>
